# PHC

./: README.md
AntCrypt/: info  readme.1st
AntCrypt/source/: Makefile  phc.c  phc.h  phc_debug.h  phc_demo.c  phc_test.c  phc_tv.c
AntCrypt/tv/: testvectors.txt
Argon/: info
Argon/Reference_implementation/: argon-ref.cpp
Battcrypt/: info
Battcrypt/code/: LICENSE
Battcrypt/test_vectors/: test_vectors.txt
Catena/: info
Catena/code/: AUTHORS  Makefile  README.md  THANKS
Catfish/: info
Catfish/ref-c/: Makefile  catfish.c  catfish.h  check_test_vectors.c  main.c  pkhash_1024.c  pkhash_1024.h
Catfish/ref-cpp/: Makefile  catfish.cc  catfish.h  main.cc
Catfish/ref-python/: catfish.py  example_params.py  keccak.py  produce_test_vectors.py
Catfish/test-vectors/: test_vectors.txt
Centrifuge/: cfuge-main.c  cfuge.c  cfuge.h  info  makefile  vectors.txt
EARWORM/: Makefile  README  aes.c  aes.h  core-opt.c  core-ref.c  core.h  info  phc.c  phc.h  sha256.c  sha256.h  test.c  util-opt.h  util-ref.h  util.h
Gambit/: info
Gambit/src/: Gambit.cbp  gambit.cpp  gambit.h  keccak.cpp  keccak.h  main.cpp
Lanarea/: Cover.md  build.sh  info  lanarea.c  lanarea.h  test.c
Lanarea/libb2/: Makefile.in  aclocal.m4  configure  configure.ac
Lyra2/: info
Lyra2/src/: Lyra2.c  Lyra2.h  Main.c  Sponge.c  Sponge.h  makefile  testVectors.txt  testVectorsNoSSE.txt
M3lcrypt/: info
M3lcrypt/code/: Makefile  Sha2.c  Sha2.h  m3lcrypt.c  m3lcrypt.h  main.c
MCS_PHS/: ControlExample.~bat  ControlExample1.~bat  ControlExample2.~bat  ControlExample3.~bat  Cover_Sheet.txt  README.txt  Statement_by_Reference_Implementation_Owner.doc  Statement_by_the_Submitter.doc  TestHash.~bat  TestSpeed1.~bat  TestSpeed2.~bat  TestSpeed3.~bat  info  makefile
MCS_PHS/results/: TestHash.txt
Makwa/: README.txt  info  kat.txt
Makwa/c/: Makefile  deleggen.c  keygen.c  makeKAT.c  makwa.c  makwa.h  phc.c  selftest.c
OmegaCrypt/: Makefile  chacha-wrapper.c  chacha-wrapper.h  cubehash-test.c  cubehash.c  cubehash.h  info  ocrypt.c  ocrypt.h  ocrypt_genKAT.c  ocrypt_heatmap.c  phs.h
OmegaCrypt/docs/: KAT_ocrypt.txt
OmegaCrypt/nettle-chacha/: Makefile.in  chacha-core-internal.c  chacha-crypt.c  chacha-init.c  chacha.h  memxor.c  nettle-types.h
POMELO/: Pomelo_testvectors.txt  info  pomelo.c
Parallel/: info
Parallel/test_vectors/: test_vectors.txt
PolyPassHash/: info
PolyPassHash/polypasshash-c/: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
PolyPassHash/polypasshash-c/lib/: Makefile.am  Makefile.in  libgfshare.c
PolyPassHash/polypasshash-c/src/: Makefile.am  Makefile.in  libpolypasshash.c  polypasshash.c
PolyPassHash/polypasshash-c/tests/: Makefile.am  Makefile.in  check_libgfshare.c  check_libpolypasshash.c  check_libpph_partialbytes.c  check_libpph_phc.c  check_libpph_thresholdless.c
Pufferfish/: info  readme.txt
Pufferfish/jtr/: pufferfish-optimized.diff  pufferfish-ref.diff
RIG/: info  testv_rig.txt
RIG/source/: main.cpp  (+2 more)
Schvrch/: info  schvrch.h
Tortuga/: Makefile  info  phs.c  phs.h  test.c  tortuga.c  tortuga.h  turtle.c  turtle.h
TwoCats/: README.md  info
Yarn/: README.txt  info  test-vectors.txt  yarn.c  yarn.h
Yescrypt/: info  yescrypt-phc.rst
tools/: make_git_repos.sh
(+166 files in other folders)
