AM_CFLAGS = -I$(top_builddir)/include
AM_LDFLAGS = -lcrypto

lib_LTLIBRARIES = libgfshare.la 
libgfshare_la_SOURCES = $(top_builddir)/include/libgfshare.h libgfshare.c \
												$(top_builddir)/include/libgfshare_tables.h
include_HEADERS = $(top_builddir)/include/libgfshare.h\
									$(top_builddir)/include/libpolypasshash.h


